Allow profile filenames to have multiple '.'s.

After this hostname.local.profile will work with --profile and
--list-profiles.  Also, the profile path file is checked if it is a
directory.
BUG: 250399
FIXED-IN: 4.6.3